* The signature settings page had improper alignment for the "Select All" checkbox (admin.css) [Bug 3826]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9251 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/admin.css
+++ b/Themes/default/css/admin.css
@@ -236,7 +236,7 @@ ul.packages li
 /*BBC permissions*/
 .list_bbc
 {
-	width: 32%;
+	width: 33%;
 }
 
 /*ManageBoards*/
